# vtp-eval

./: .gitignore  README.md  pyproject.toml
configs/: figure3.yaml  methods.yaml  text_visual_attention.yaml
docs/: COLAB_FIXES.md  eval.md  figure3.md  proposed_method.md  text_visual_attention.md  vast.md
docs/superpowers/plans/: 2026-05-16-vtp-eval-implementation.md
docs/superpowers/specs/: 2026-05-16-vtp-eval-design.md
install/: _common.sh  _patch_fastv.py  baseline.sh  divprune.sh  fastv.sh  figure3.sh  sparsevila.sh  sparsevlm.sh  text_visual_attention.sh  visionzip.sh
notebooks/: _build_fastv_eval.py  _build_pope_eval.py  fastv_eval.ipynb  pope_eval.ipynb  text_visual_attention.ipynb
scripts/: README.md  figure3_run.sh  figure3_ui.sh  run_all.sh  run_one.sh
scripts/text_visual_attention/: list_samples.sh  run.sh  ui.sh
scripts/vast/: onstart.sh
tests/: test_adapters_load.py  test_pipeline_smoke.py  test_result_io.py  test_tflops.py  test_timing.py
vtp_eval/: __init__.py  run_lmms.py
vtp_eval/adapters/: __init__.py  _base.py  llava_baseline.py  llava_divprune.py  llava_fastv.py  llava_sparsevila.py  llava_sparsevlm.py  llava_visionzip.py
vtp_eval/eval/: README.md  __init__.py
vtp_eval/figure3/: coco.py  ui.py
vtp_eval/insight/: __init__.py
vtp_eval/insight/text_visual_attention/: __init__.py  __main__.py  attention.py  metrics.py  tokens.py  ui.py  visualize.py
vtp_eval/proposed_method/: README.md  __init__.py
vtp_eval/utils/: __init__.py  result_io.py  tflops.py  timing.py
